#9 Updated some NSC* classes and ChatMessage enums

--- a/docs/api-reference/CRMScript.NetServer.NSCategorizationModelDetails.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCategorizationModelDetails.yml
@@ -3,16 +3,15 @@ items:
 - uid: CRMScript.NetServer.NSCategorizationModelDetails
   commentId: T:CRMScript.NetServer.NSCategorizationModelDetails
   id: NSCategorizationModelDetails
-  so.intellisense: Void.NSCategorizationModelDetails
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSCategorizationModelDetails.#ctor
   - CRMScript.NetServer.NSCategorizationModelDetails.GetAccuracy()
   - CRMScript.NetServer.NSCategorizationModelDetails.GetModelBuiltDateTime()
   - CRMScript.NetServer.NSCategorizationModelDetails.GetTicketCountForTraining()
-  - CRMScript.NetServer.NSCategorizationModelDetails.#ctor
-  - CRMScript.NetServer.NSCategorizationModelDetails.SetAccuracy()
-  - CRMScript.NetServer.NSCategorizationModelDetails.SetModelBuiltDateTime()
+  - CRMScript.NetServer.NSCategorizationModelDetails.SetAccuracy(Float)
+  - CRMScript.NetServer.NSCategorizationModelDetails.SetModelBuiltDateTime(DateTime)
   - CRMScript.NetServer.NSCategorizationModelDetails.SetTicketCountForTraining(Integer)
   name: NSCategorizationModelDetails
   nameWithType: NSCategorizationModelDetails
@@ -20,63 +19,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSCategorizationModelDetails.GetAccuracy()
-  commentId: M:CRMScript.NetServer.NSCategorizationModelDetails.GetAccuracy()
-  id: 'GetAccuracy()'
-  so.intellisense: NSCategorizationModelDetails.GetAccuracy
-  langs:
-  - crmscript
-  name: 'GetAccuracy()'
-  nameWithType: NSCategorizationModelDetails.GetAccuracy()
-  fullName: CRMScript.NetServer.NSCategorizationModelDetails.GetAccuracy()
-  type: Method
-  summary: "\nAccuracy of the trained model<p></p>\n<strong>Returns:</strong>Float<p></p>\n<pre><code>NSCategorizationModelDetails thing;\nFloat accuracy = thing.GetAccuracy();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: Float GetAccuracy()
-    parameters:
-    return:
-      type: CRMScript.Global.Float
-  example: 
-  - "\n<pre><code>NSCategorizationModelDetails thing;\nFloat accuracy = thing.GetAccuracy();</code></pre>\n"
-- uid: CRMScript.NetServer.NSCategorizationModelDetails.GetModelBuiltDateTime()
-  commentId: M:CRMScript.NetServer.NSCategorizationModelDetails.GetModelBuiltDateTime()
-  id: 'GetModelBuiltDateTime()'
-  so.intellisense: NSCategorizationModelDetails.GetModelBuiltDateTime
-  langs:
-  - crmscript
-  name: 'GetModelBuiltDateTime()'
-  nameWithType: NSCategorizationModelDetails.GetModelBuiltDateTime()
-  fullName: CRMScript.NetServer.NSCategorizationModelDetails.GetModelBuiltDateTime()
-  type: Method
-  summary: "\nTime the training finished<p></p>\n<strong>Returns:</strong>DateTime<p></p>\n<pre><code>NSCategorizationModelDetails thing;\nDateTime modelBuiltDateTime = thing.GetModelBuiltDateTime();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: DateTime GetModelBuiltDateTime()
-    parameters:
-    return:
-      type: CRMScript.Global.DateTime
-  example: 
-  - "\n<pre><code>NSCategorizationModelDetails thing;\nDateTime modelBuiltDateTime = thing.GetModelBuiltDateTime();</code></pre>\n"
-- uid: CRMScript.NetServer.NSCategorizationModelDetails.GetTicketCountForTraining()
-  commentId: M:CRMScript.NetServer.NSCategorizationModelDetails.GetTicketCountForTraining()
-  id: 'GetTicketCountForTraining()'
-  so.intellisense: NSCategorizationModelDetails.GetTicketCountForTraining
-  langs:
-  - crmscript
-  name: 'GetTicketCountForTraining()'
-  nameWithType: NSCategorizationModelDetails.GetTicketCountForTraining()
-  fullName: CRMScript.NetServer.NSCategorizationModelDetails.GetTicketCountForTraining()
-  type: Method
-  summary: "\nNumber of tickets used to train the model<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSCategorizationModelDetails thing;\nInteger ticketCountForTraining = thing.GetTicketCountForTraining();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: Integer GetTicketCountForTraining()
-    parameters:
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSCategorizationModelDetails thing;\nInteger ticketCountForTraining = thing.GetTicketCountForTraining();</code></pre>\n"
 - uid: CRMScript.NetServer.NSCategorizationModelDetails.#ctor
   commentId: M:CRMScript.NetServer.NSCategorizationModelDetails.#ctor
   id: '#ctor'
@@ -92,38 +34,108 @@ items:
   syntax: 
     content: NSCategorizationModelDetails
   example: 
-- uid: CRMScript.NetServer.NSCategorizationModelDetails.SetAccuracy()
-  commentId: M:CRMScript.NetServer.NSCategorizationModelDetails.SetAccuracy()
-  id: 'SetAccuracy()'
+- uid: CRMScript.NetServer.NSCategorizationModelDetails.GetAccuracy()
+  commentId: M:CRMScript.NetServer.NSCategorizationModelDetails.GetAccuracy()
+  id: 'GetAccuracy()'
+  so.intellisense: NSCategorizationModelDetails.GetAccuracy
+  langs:
+  - crmscript
+  name: 'GetAccuracy()'
+  nameWithType: NSCategorizationModelDetails.GetAccuracy()
+  fullName: CRMScript.NetServer.NSCategorizationModelDetails.GetAccuracy()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Float GetAccuracy()
+    parameters: []
+    return:
+      type: CRMScript.Global.Float
+      description: Accuracy of the trained model
+  example: 
+  - "\n<pre><code>NSCategorizationModelDetails thing;\nFloat accuracy = thing.GetAccuracy();</code></pre>\n"
+- uid: CRMScript.NetServer.NSCategorizationModelDetails.GetModelBuiltDateTime()
+  commentId: M:CRMScript.NetServer.NSCategorizationModelDetails.GetModelBuiltDateTime()
+  id: 'GetModelBuiltDateTime()'
+  so.intellisense: NSCategorizationModelDetails.GetModelBuiltDateTime
+  langs:
+  - crmscript
+  name: 'GetModelBuiltDateTime()'
+  nameWithType: NSCategorizationModelDetails.GetModelBuiltDateTime()
+  fullName: CRMScript.NetServer.NSCategorizationModelDetails.GetModelBuiltDateTime()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: DateTime GetModelBuiltDateTime()
+    parameters: []
+    return:
+      type: CRMScript.Global.DateTime
+      description: Time the training finished
+  example: 
+  - "\n<pre><code>NSCategorizationModelDetails thing;\nDateTime modelBuiltDateTime = thing.GetModelBuiltDateTime();</code></pre>\n"
+- uid: CRMScript.NetServer.NSCategorizationModelDetails.GetTicketCountForTraining()
+  commentId: M:CRMScript.NetServer.NSCategorizationModelDetails.GetTicketCountForTraining()
+  id: 'GetTicketCountForTraining()'
+  so.intellisense: NSCategorizationModelDetails.GetTicketCountForTraining
+  langs:
+  - crmscript
+  name: 'GetTicketCountForTraining()'
+  nameWithType: NSCategorizationModelDetails.GetTicketCountForTraining()
+  fullName: CRMScript.NetServer.NSCategorizationModelDetails.GetTicketCountForTraining()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetTicketCountForTraining()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: Number of tickets used to train the model
+  example: 
+  - "\n<pre><code>NSCategorizationModelDetails thing;\nInteger ticketCountForTraining = thing.GetTicketCountForTraining();</code></pre>\n"
+- uid: CRMScript.NetServer.NSCategorizationModelDetails.SetAccuracy(Float)
+  commentId: M:CRMScript.NetServer.NSCategorizationModelDetails.SetAccuracy(Float)
+  id: 'SetAccuracy(Float)'
   so.intellisense: NSCategorizationModelDetails.SetAccuracy
   langs:
   - crmscript
-  name: 'SetAccuracy()'
-  nameWithType: NSCategorizationModelDetails.SetAccuracy()
-  fullName: CRMScript.NetServer.NSCategorizationModelDetails.SetAccuracy()
+  name: 'SetAccuracy(Float)'
+  nameWithType: NSCategorizationModelDetails.SetAccuracy(Float)
+  fullName: CRMScript.NetServer.NSCategorizationModelDetails.SetAccuracy(Float)
   type: Method
-  summary: "\nAccuracy of the trained model\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetAccuracy(Float accuracy)
+    content: Void SetAccuracy(Float accuracy)
     parameters:
+    - id: accuracy
+      type: CRMScript.Global.Float
+      description: Accuracy of the trained model
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSCategorizationModelDetails thing;\nFloat accuracy;\nthing.SetAccuracy(accuracy);</code></pre>\n"
-- uid: CRMScript.NetServer.NSCategorizationModelDetails.SetModelBuiltDateTime()
-  commentId: M:CRMScript.NetServer.NSCategorizationModelDetails.SetModelBuiltDateTime()
-  id: 'SetModelBuiltDateTime()'
+- uid: CRMScript.NetServer.NSCategorizationModelDetails.SetModelBuiltDateTime(DateTime)
+  commentId: M:CRMScript.NetServer.NSCategorizationModelDetails.SetModelBuiltDateTime(DateTime)
+  id: 'SetModelBuiltDateTime(DateTime)'
   so.intellisense: NSCategorizationModelDetails.SetModelBuiltDateTime
   langs:
   - crmscript
-  name: 'SetModelBuiltDateTime()'
-  nameWithType: NSCategorizationModelDetails.SetModelBuiltDateTime()
-  fullName: CRMScript.NetServer.NSCategorizationModelDetails.SetModelBuiltDateTime()
+  name: 'SetModelBuiltDateTime(DateTime)'
+  nameWithType: NSCategorizationModelDetails.SetModelBuiltDateTime(DateTime)
+  fullName: CRMScript.NetServer.NSCategorizationModelDetails.SetModelBuiltDateTime(DateTime)
   type: Method
-  summary: "\nTime the training finished\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetModelBuiltDateTime(DateTime modelBuiltDateTime)
+    content: Void SetModelBuiltDateTime(DateTime modelBuiltDateTime)
     parameters:
+    - id: modelBuiltDateTime
+      type: CRMScript.Global.DateTime
+      description: Time the training finished
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSCategorizationModelDetails thing;\nDateTime modelBuiltDateTime;\nthing.SetModelBuiltDateTime(modelBuiltDateTime);</code></pre>\n"
 - uid: CRMScript.NetServer.NSCategorizationModelDetails.SetTicketCountForTraining(Integer)
@@ -136,14 +148,16 @@ items:
   nameWithType: NSCategorizationModelDetails.SetTicketCountForTraining(Integer)
   fullName: CRMScript.NetServer.NSCategorizationModelDetails.SetTicketCountForTraining(Integer)
   type: Method
-  summary: "\nNumber of tickets used to train the model\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetTicketCountForTraining(Integer ticketCountForTraining)
+    content: Void SetTicketCountForTraining(Integer ticketCountForTraining)
     parameters:
     - id: ticketCountForTraining
       type: CRMScript.Global.Integer
-      description: 
+      description: Number of tickets used to train the model
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSCategorizationModelDetails thing;\nInteger ticketCountForTraining;\nthing.SetTicketCountForTraining(ticketCountForTraining);</code></pre>\n"
 references:
@@ -171,3 +185,9 @@ references:
   name: Integer
   nameWithType: Integer
   fullName: CRMScript.Global.Integer
+- uid: CRMScript.Global.Void
+  commentId: T:CRMScript.Global.Void
+  isExternal: true
+  name: Void
+  nameWithType: Void
+  fullName: CRMScript.Global.Void
