--- a/docs/api-reference/CRMScript.NetServer.NSChangedData.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSChangedData.yml
@@ -3,80 +3,22 @@ items:
 - uid: CRMScript.NetServer.NSChangedData
   commentId: T:CRMScript.NetServer.NSChangedData
   id: NSChangedData
-  so.intellisense: Void.NSChangedData
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSChangedData.#ctor
   - CRMScript.NetServer.NSChangedData.GetAddedRecords()
   - CRMScript.NetServer.NSChangedData.GetDeletedRecords()
   - CRMScript.NetServer.NSChangedData.GetUpdatedRecords()
-  - CRMScript.NetServer.NSChangedData.#ctor
-  - CRMScript.NetServer.NSChangedData.SetAddedRecords()
-  - CRMScript.NetServer.NSChangedData.SetDeletedRecords()
-  - CRMScript.NetServer.NSChangedData.SetUpdatedRecords()
+  - CRMScript.NetServer.NSChangedData.SetAddedRecords(NSChangedDataItem[])
+  - CRMScript.NetServer.NSChangedData.SetDeletedRecords(NSChangedDataItem[])
+  - CRMScript.NetServer.NSChangedData.SetUpdatedRecords(NSChangedDataItem[])
   name: NSChangedData
   nameWithType: NSChangedData
   fullName: CRMScript.NetServer.NSChangedData
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSChangedData.GetAddedRecords()
-  commentId: M:CRMScript.NetServer.NSChangedData.GetAddedRecords()
-  id: 'GetAddedRecords()'
-  so.intellisense: NSChangedData.GetAddedRecords
-  langs:
-  - crmscript
-  name: 'GetAddedRecords()'
-  nameWithType: NSChangedData.GetAddedRecords()
-  fullName: CRMScript.NetServer.NSChangedData.GetAddedRecords()
-  type: Method
-  summary: "\nIds of added records.<p></p>\n<strong>Returns:</strong>NSChangedDataItem[]<p></p>\n<pre><code>NSChangedData thing;\nNSChangedDataItem[] addedRecords = thing.GetAddedRecords();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: NSChangedDataItem[] GetAddedRecords()
-    parameters:
-    return:
-      type: CRMScript.NetServer.NSChangedDataItem[]
-  example: 
-  - "\n<pre><code>NSChangedData thing;\nNSChangedDataItem[] addedRecords = thing.GetAddedRecords();</code></pre>\n"
-- uid: CRMScript.NetServer.NSChangedData.GetDeletedRecords()
-  commentId: M:CRMScript.NetServer.NSChangedData.GetDeletedRecords()
-  id: 'GetDeletedRecords()'
-  so.intellisense: NSChangedData.GetDeletedRecords
-  langs:
-  - crmscript
-  name: 'GetDeletedRecords()'
-  nameWithType: NSChangedData.GetDeletedRecords()
-  fullName: CRMScript.NetServer.NSChangedData.GetDeletedRecords()
-  type: Method
-  summary: "\nIds of deleted records.<p></p>\n<strong>Returns:</strong>NSChangedDataItem[]<p></p>\n<pre><code>NSChangedData thing;\nNSChangedDataItem[] deletedRecords = thing.GetDeletedRecords();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: NSChangedDataItem[] GetDeletedRecords()
-    parameters:
-    return:
-      type: CRMScript.NetServer.NSChangedDataItem[]
-  example: 
-  - "\n<pre><code>NSChangedData thing;\nNSChangedDataItem[] deletedRecords = thing.GetDeletedRecords();</code></pre>\n"
-- uid: CRMScript.NetServer.NSChangedData.GetUpdatedRecords()
-  commentId: M:CRMScript.NetServer.NSChangedData.GetUpdatedRecords()
-  id: 'GetUpdatedRecords()'
-  so.intellisense: NSChangedData.GetUpdatedRecords
-  langs:
-  - crmscript
-  name: 'GetUpdatedRecords()'
-  nameWithType: NSChangedData.GetUpdatedRecords()
-  fullName: CRMScript.NetServer.NSChangedData.GetUpdatedRecords()
-  type: Method
-  summary: "\nIds of updated records.<p></p>\n<strong>Returns:</strong>NSChangedDataItem[]<p></p>\n<pre><code>NSChangedData thing;\nNSChangedDataItem[] updatedRecords = thing.GetUpdatedRecords();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: NSChangedDataItem[] GetUpdatedRecords()
-    parameters:
-    return:
-      type: CRMScript.NetServer.NSChangedDataItem[]
-  example: 
-  - "\n<pre><code>NSChangedData thing;\nNSChangedDataItem[] updatedRecords = thing.GetUpdatedRecords();</code></pre>\n"
 - uid: CRMScript.NetServer.NSChangedData.#ctor
   commentId: M:CRMScript.NetServer.NSChangedData.#ctor
   id: '#ctor'
@@ -92,55 +34,130 @@ items:
   syntax: 
     content: NSChangedData
   example: 
-- uid: CRMScript.NetServer.NSChangedData.SetAddedRecords()
-  commentId: M:CRMScript.NetServer.NSChangedData.SetAddedRecords()
-  id: 'SetAddedRecords()'
+- uid: CRMScript.NetServer.NSChangedData.GetAddedRecords()
+  commentId: M:CRMScript.NetServer.NSChangedData.GetAddedRecords()
+  id: 'GetAddedRecords()'
+  so.intellisense: NSChangedData.GetAddedRecords
+  langs:
+  - crmscript
+  name: 'GetAddedRecords()'
+  nameWithType: NSChangedData.GetAddedRecords()
+  fullName: CRMScript.NetServer.NSChangedData.GetAddedRecords()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: NSChangedDataItem[] GetAddedRecords()
+    parameters: []
+    return:
+      type: CRMScript.NetServer.NSChangedDataItem[]
+      description: IDs of added records.
+  example: 
+  - "\n<pre><code>NSChangedData thing;\nNSChangedDataItem[] addedRecords = thing.GetAddedRecords();</code></pre>\n"
+- uid: CRMScript.NetServer.NSChangedData.GetDeletedRecords()
+  commentId: M:CRMScript.NetServer.NSChangedData.GetDeletedRecords()
+  id: 'GetDeletedRecords()'
+  so.intellisense: NSChangedData.GetDeletedRecords
+  langs:
+  - crmscript
+  name: 'GetDeletedRecords()'
+  nameWithType: NSChangedData.GetDeletedRecords()
+  fullName: CRMScript.NetServer.NSChangedData.GetDeletedRecords()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: NSChangedDataItem[] GetDeletedRecords()
+    parameters: []
+    return:
+      type: CRMScript.NetServer.NSChangedDataItem[]
+      description: IDs of deleted records.
+  example: 
+  - "\n<pre><code>NSChangedData thing;\nNSChangedDataItem[] deletedRecords = thing.GetDeletedRecords();</code></pre>\n"
+- uid: CRMScript.NetServer.NSChangedData.GetUpdatedRecords()
+  commentId: M:CRMScript.NetServer.NSChangedData.GetUpdatedRecords()
+  id: 'GetUpdatedRecords()'
+  so.intellisense: NSChangedData.GetUpdatedRecords
+  langs:
+  - crmscript
+  name: 'GetUpdatedRecords()'
+  nameWithType: NSChangedData.GetUpdatedRecords()
+  fullName: CRMScript.NetServer.NSChangedData.GetUpdatedRecords()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: NSChangedDataItem[] GetUpdatedRecords()
+    parameters: []
+    return:
+      type: CRMScript.NetServer.NSChangedDataItem[]
+      description: IDs of updated records.
+  example: 
+  - "\n<pre><code>NSChangedData thing;\nNSChangedDataItem[] updatedRecords = thing.GetUpdatedRecords();</code></pre>\n"
+- uid: CRMScript.NetServer.NSChangedData.SetAddedRecords(NSChangedDataItem[])
+  commentId: M:CRMScript.NetServer.NSChangedData.SetAddedRecords(NSChangedDataItem[])
+  id: 'SetAddedRecords(NSChangedDataItem[])'
   so.intellisense: NSChangedData.SetAddedRecords
   langs:
   - crmscript
-  name: 'SetAddedRecords()'
-  nameWithType: NSChangedData.SetAddedRecords()
-  fullName: CRMScript.NetServer.NSChangedData.SetAddedRecords()
+  name: 'SetAddedRecords(NSChangedDataItem[])'
+  nameWithType: NSChangedData.SetAddedRecords(NSChangedDataItem[])
+  fullName: CRMScript.NetServer.NSChangedData.SetAddedRecords(NSChangedDataItem[])
   type: Method
-  summary: "\nIds of added records.\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetAddedRecords(NSChangedDataItem[] addedRecords)
+    content: Void SetAddedRecords(NSChangedDataItem[] addedRecords)
     parameters:
+    - id: addedRecords
+      type: CRMScript.NetServer.NSChangedDataItem[]
+      description: IDs of added records.
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSChangedData thing;\nNSChangedDataItem[] addedRecords;\nthing.SetAddedRecords(addedRecords);</code></pre>\n"
-- uid: CRMScript.NetServer.NSChangedData.SetDeletedRecords()
-  commentId: M:CRMScript.NetServer.NSChangedData.SetDeletedRecords()
-  id: 'SetDeletedRecords()'
+- uid: CRMScript.NetServer.NSChangedData.SetDeletedRecords(NSChangedDataItem[])
+  commentId: M:CRMScript.NetServer.NSChangedData.SetDeletedRecords(NSChangedDataItem[])
+  id: 'SetDeletedRecords(NSChangedDataItem[])'
   so.intellisense: NSChangedData.SetDeletedRecords
   langs:
   - crmscript
-  name: 'SetDeletedRecords()'
-  nameWithType: NSChangedData.SetDeletedRecords()
-  fullName: CRMScript.NetServer.NSChangedData.SetDeletedRecords()
+  name: 'SetDeletedRecords(NSChangedDataItem[])'
+  nameWithType: NSChangedData.SetDeletedRecords(NSChangedDataItem[])
+  fullName: CRMScript.NetServer.NSChangedData.SetDeletedRecords(NSChangedDataItem[])
   type: Method
-  summary: "\nIds of deleted records.\n"
+  summary: ""
   remarks: 
   syntax: 
     content: SetDeletedRecords(NSChangedDataItem[] deletedRecords)
     parameters:
+    - id: deletedRecords
+      type: CRMScript.NetServer.NSChangedDataItem[]
+      description: IDs of deleted records.
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSChangedData thing;\nNSChangedDataItem[] deletedRecords;\nthing.SetDeletedRecords(deletedRecords);</code></pre>\n"
-- uid: CRMScript.NetServer.NSChangedData.SetUpdatedRecords()
-  commentId: M:CRMScript.NetServer.NSChangedData.SetUpdatedRecords()
-  id: 'SetUpdatedRecords()'
+- uid: CRMScript.NetServer.NSChangedData.SetUpdatedRecords(NSChangedDataItem[])
+  commentId: M:CRMScript.NetServer.NSChangedData.SetUpdatedRecords(NSChangedDataItem[])
+  id: 'SetUpdatedRecords(NSChangedDataItem[])'
   so.intellisense: NSChangedData.SetUpdatedRecords
   langs:
   - crmscript
-  name: 'SetUpdatedRecords()'
-  nameWithType: NSChangedData.SetUpdatedRecords()
-  fullName: CRMScript.NetServer.NSChangedData.SetUpdatedRecords()
+  name: 'SetUpdatedRecords(NSChangedDataItem[])'
+  nameWithType: NSChangedData.SetUpdatedRecords(NSChangedDataItem[])
+  fullName: CRMScript.NetServer.NSChangedData.SetUpdatedRecords(NSChangedDataItem[])
   type: Method
-  summary: "\nIds of updated records.\n"
+  summary: "\nIDs of updated records.\n"
   remarks: 
   syntax: 
     content: SetUpdatedRecords(NSChangedDataItem[] updatedRecords)
     parameters:
+    - id: updatedRecords
+      type: CRMScript.NetServer.NSChangedDataItem[]
+      description: IDs of updated records.
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSChangedData thing;\nNSChangedDataItem[] updatedRecords;\nthing.SetUpdatedRecords(updatedRecords);</code></pre>\n"
 references:
@@ -170,3 +187,9 @@ references:
   name: NSChangedDataItem
   nameWithType: NSChangedDataItem
   fullName: CRMScript.NetServer.NSChangedDataItem
+- uid: CRMScript.Global.Void
+  commentId: T:CRMScript.Global.Void
+  isExternal: true
+  name: Void
+  nameWithType: Void
+  fullName: CRMScript.Global.Void
