--- a/docs/api-reference/CRMScript.NetServer.yml
+++ b/docs/api-reference/CRMScript.NetServer.yml
@@ -28,6 +28,8 @@ items:
   - CRMScript.NetServer.calReplyStatus
   - CRMScript.NetServer.AppointmentCautionWarning
   - CRMScript.NetServer.changedOwner
+  - CRMScript.NetServer.ChatMessageType
+  - CRMScript.NetServer.ChatMessageSpecialType
   - CRMScript.NetServer.ChatSessionStatus
   - CRMScript.NetServer.checkEscalating
   - CRMScript.NetServer.Checkoutstate
@@ -115,7 +117,6 @@ items:
   - CRMScript.NetServer.NSBlobEntity
   - CRMScript.NetServer.NSBulkUpdateAgent
   - CRMScript.NetServer.NSBusiness
-
   - CRMScript.NetServer.NSCarrier
   - CRMScript.NetServer.NSCategorizationModelDetails
   - CRMScript.NetServer.NSCategorizationStatusResponse
@@ -603,7 +604,6 @@ items:
   - CRMScript.NetServer.slevel
   - CRMScript.NetServer.source
   - CRMScript.NetServer.sourceType
-  - CRMScript.NetServer.specialType
   - CRMScript.NetServer.state
   - CRMScript.NetServer.status
   - CRMScript.NetServer.statusFilter
@@ -617,7 +617,6 @@ items:
   - CRMScript.NetServer.ticketNewinfo
   - CRMScript.NetServer.ticketRead
   - CRMScript.NetServer.timeCounter
-  - CRMScript.NetServer.type
   - CRMScript.NetServer.urlEncoding
   - CRMScript.NetServer.userGroupId
   - CRMScript.NetServer.userValueOverride
@@ -1020,18 +1019,18 @@ references:
   name: NSChatMessage
   nameWithType: NSChatMessage
   fullName: CRMScript.NetServer.NSChatMessage
-- uid: CRMScript.NetServer.specialType
-  commentId: T:CRMScript.NetServer.specialType
+- uid: CRMScript.NetServer.ChatMessageSpecialType
+  commentId: T:CRMScript.NetServer.ChatMessageSpecialType
   isExternal: true
-  name: specialType
-  nameWithType: specialType
-  fullName: CRMScript.NetServer.specialType
-- uid: CRMScript.NetServer.type
-  commentId: T:CRMScript.NetServer.type
+  name: ChatMessageSpecialType
+  nameWithType: ChatMessageSpecialType
+  fullName: CRMScript.NetServer.ChatMessageSpecialType
+- uid: CRMScript.NetServer.ChatMessageType
+  commentId: T:CRMScript.NetServer.ChatMessageType
   isExternal: true
-  name: type
-  nameWithType: type
-  fullName: CRMScript.NetServer.type
+  name: ChatMessageType
+  nameWithType: ChatMessageType
+  fullName: CRMScript.NetServer.ChatMessageType
 - uid: CRMScript.NetServer.NSChatOpeningHours
   commentId: T:CRMScript.NetServer.NSChatOpeningHours
   isExternal: true
