--- a/docs/api-reference/toc.yml
+++ b/docs/api-reference/toc.yml
@@ -1146,6 +1146,10 @@ items:
       href: CRMScript.NetServer.BatchTaskState.yml
     - name: BookingType
       href: CRMScript.NetServer.BookingType.yml
+    - name: ChatMessageType
+      href: CRMScript.NetServer.ChatMessageType.yml
+    - name: ChatMessageSpecialType
+      href: CRMScript.NetServer.ChatMessageSpecialType.yml
     - name: Enum calMethod
       href: CRMScript.NetServer.calMethod.yml
     - name: Enum calReplyStatus
@@ -1334,8 +1338,6 @@ items:
       href: CRMScript.NetServer.source.yml
     - name: Enum sourceType
       href: CRMScript.NetServer.sourceType.yml
-    - name: Enum specialType
-      href: CRMScript.NetServer.specialType.yml
     - name: Enum state
       href: CRMScript.NetServer.state.yml
     - name: Enum status
@@ -1362,8 +1364,6 @@ items:
       href: CRMScript.NetServer.ticketRead.yml
     - name: Enum timeCounter
       href: CRMScript.NetServer.timeCounter.yml
-    - name: Enum type
-      href: CRMScript.NetServer.type.yml
     - name: Enum urlEncoding
       href: CRMScript.NetServer.urlEncoding.yml
     - name: Enum userGroupId
