--- a/docs/api-reference/CRMScript.NetServer.NSCarrier.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCarrier.yml
@@ -6,48 +6,16 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSCarrier.#ctor
   - CRMScript.NetServer.NSCarrier.GetFieldProperties()
   - CRMScript.NetServer.NSCarrier.GetTableRight()
-  - CRMScript.NetServer.NSCarrier.#ctor
-  - CRMScript.NetServer.NSCarrier.SetFieldProperties()
-  - CRMScript.NetServer.NSCarrier.SetTableRight()
+  - CRMScript.NetServer.NSCarrier.SetFieldProperties(Map)
+  - CRMScript.NetServer.NSCarrier.SetTableRight(NSTableRight)
   name: NSCarrier
   nameWithType: NSCarrier
   fullName: CRMScript.NetServer.NSCarrier
   type: Class
   summary: 
-  example: 
-- uid: CRMScript.NetServer.NSCarrier.GetFieldProperties()
-  commentId: M:CRMScript.NetServer.NSCarrier.GetFieldProperties()
-  id: 'GetFieldProperties()'
-  so.intellisense: NSCarrier.GetFieldProperties
-  langs:
-  - crmscript
-  name: 'GetFieldProperties()'
-  nameWithType: NSCarrier.GetFieldProperties()
-  fullName: CRMScript.NetServer.NSCarrier.GetFieldProperties()
-  type: Method
-  summary: 
-  remarks: 
-  syntax: 
-    content: GetFieldProperties()
-    parameters:
-  example: 
-- uid: CRMScript.NetServer.NSCarrier.GetTableRight()
-  commentId: M:CRMScript.NetServer.NSCarrier.GetTableRight()
-  id: 'GetTableRight()'
-  so.intellisense: NSCarrier.GetTableRight
-  langs:
-  - crmscript
-  name: 'GetTableRight()'
-  nameWithType: NSCarrier.GetTableRight()
-  fullName: CRMScript.NetServer.NSCarrier.GetTableRight()
-  type: Method
-  summary: 
-  remarks: 
-  syntax: 
-    content: GetTableRight()
-    parameters:
   example: 
 - uid: CRMScript.NetServer.NSCarrier.#ctor
   commentId: M:CRMScript.NetServer.NSCarrier.#ctor
@@ -64,37 +32,85 @@ items:
   syntax: 
     content: NSCarrier
   example: 
-- uid: CRMScript.NetServer.NSCarrier.SetFieldProperties()
-  commentId: M:CRMScript.NetServer.NSCarrier.SetFieldProperties()
-  id: 'SetFieldProperties()'
+- uid: CRMScript.NetServer.NSCarrier.GetFieldProperties()
+  commentId: M:CRMScript.NetServer.NSCarrier.GetFieldProperties()
+  id: 'GetFieldProperties()'
+  so.intellisense: NSCarrier.GetFieldProperties
+  langs:
+  - crmscript
+  name: 'GetFieldProperties()'
+  nameWithType: NSCarrier.GetFieldProperties()
+  fullName: CRMScript.NetServer.NSCarrier.GetFieldProperties()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: Map GetFieldProperties()
+    parameters: []
+    return:
+      type: CRMScript.Global.Map
+      description:
+  example: 
+- uid: CRMScript.NetServer.NSCarrier.GetTableRight()
+  commentId: M:CRMScript.NetServer.NSCarrier.GetTableRight()
+  id: 'GetTableRight()'
+  so.intellisense: NSCarrier.GetTableRight
+  langs:
+  - crmscript
+  name: 'GetTableRight()'
+  nameWithType: NSCarrier.GetTableRight()
+  fullName: CRMScript.NetServer.NSCarrier.GetTableRight()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: NSTableRight GetTableRight()
+    parameters: []
+    return:
+      type: CRMScript.NetServer.NSTableRight
+      description:
+  example: 
+- uid: CRMScript.NetServer.NSCarrier.SetFieldProperties(Map)
+  commentId: M:CRMScript.NetServer.NSCarrier.SetFieldProperties(Map)
+  id: 'SetFieldProperties(Map)'
   so.intellisense: NSCarrier.SetFieldProperties
   langs:
   - crmscript
-  name: 'SetFieldProperties()'
-  nameWithType: NSCarrier.SetFieldProperties()
-  fullName: CRMScript.NetServer.NSCarrier.SetFieldProperties()
+  name: 'SetFieldProperties(Map)'
+  nameWithType: NSCarrier.SetFieldProperties(Map)
+  fullName: CRMScript.NetServer.NSCarrier.SetFieldProperties(Map)
   type: Method
   summary: 
   remarks: 
   syntax: 
-    content: SetFieldProperties(FieldPropertyDictionary p_0)
+    content: Void SetFieldProperties(Map properties)
     parameters:
+    - id: properties
+      type: CRMScript.Global.Map
+      description:
+    return:
+      type: CRMScript.Global.Void
   example: 
-- uid: CRMScript.NetServer.NSCarrier.SetTableRight()
-  commentId: M:CRMScript.NetServer.NSCarrier.SetTableRight()
-  id: 'SetTableRight()'
+- uid: CRMScript.NetServer.NSCarrier.SetTableRight(NSTableRight)
+  commentId: M:CRMScript.NetServer.NSCarrier.SetTableRight(NSTableRight)
+  id: 'SetTableRight(NSTableRight)'
   so.intellisense: NSCarrier.SetTableRight
   langs:
   - crmscript
-  name: 'SetTableRight()'
-  nameWithType: NSCarrier.SetTableRight()
-  fullName: CRMScript.NetServer.NSCarrier.SetTableRight()
+  name: 'SetTableRight(NSTableRight)'
+  nameWithType: NSCarrier.SetTableRight(NSTableRight)
+  fullName: CRMScript.NetServer.NSCarrier.SetTableRight(NSTableRight)
   type: Method
   summary: 
   remarks: 
   syntax: 
-    content: SetTableRight(NSTableRight p_0)
+    content: Void SetTableRight(NSTableRight right)
     parameters:
+    - id: right
+      type: CRMScript.NetServer.NSTableRight
+      description:
+    return:
+      type: CRMScript.Global.Void
   example: 
 references:
 - uid: CRMScript.NetServer.NSCarrier
@@ -103,3 +119,21 @@ references:
   name: NSCarrier
   nameWithType: NSCarrier
   fullName: CRMScript.NetServer.NSCarrier
+- uid: CRMScript.NetServer.NSTableRight
+  commentId: T:CRMScript.NetServer.NSTableRight
+  isExternal: true
+  name: NSTableRight
+  nameWithType: NSTableRight
+  fullName: CRMScript.NetServer.NSTableRight
+- uid: CRMScript.Global.Void
+  commentId: T:CRMScript.Global.Void
+  isExternal: true
+  name: Void
+  nameWithType: Void
+  fullName: CRMScript.Global.Void
+- uid: CRMScript.Global.Map
+  commentId: T:CRMScript.Global.Map
+  isExternal: true
+  name: Map
+  nameWithType: Map
+  fullName: CRMScript.Global.Map
