--- a/docs/api-reference/CRMScript.NetServer.NSCategorizationStatusResponse.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCategorizationStatusResponse.yml
@@ -3,18 +3,17 @@ items:
 - uid: CRMScript.NetServer.NSCategorizationStatusResponse
   commentId: T:CRMScript.NetServer.NSCategorizationStatusResponse
   id: NSCategorizationStatusResponse
-  so.intellisense: Void.NSCategorizationStatusResponse
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSCategorizationStatusResponse.#ctor
   - CRMScript.NetServer.NSCategorizationStatusResponse.GetContextIdentifier()
   - CRMScript.NetServer.NSCategorizationStatusResponse.GetCurrentModel()
   - CRMScript.NetServer.NSCategorizationStatusResponse.GetPreviousModel()
   - CRMScript.NetServer.NSCategorizationStatusResponse.GetStatus()
-  - CRMScript.NetServer.NSCategorizationStatusResponse.#ctor
   - CRMScript.NetServer.NSCategorizationStatusResponse.SetContextIdentifier(String)
-  - CRMScript.NetServer.NSCategorizationStatusResponse.SetCurrentModel()
-  - CRMScript.NetServer.NSCategorizationStatusResponse.SetPreviousModel()
+  - CRMScript.NetServer.NSCategorizationStatusResponse.SetCurrentModel(NSCategorizationModelDetails)
+  - CRMScript.NetServer.NSCategorizationStatusResponse.SetPreviousModel(NSCategorizationModelDetails)
   - CRMScript.NetServer.NSCategorizationStatusResponse.SetStatus(String)
   name: NSCategorizationStatusResponse
   nameWithType: NSCategorizationStatusResponse
@@ -22,82 +21,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSCategorizationStatusResponse.GetContextIdentifier()
-  commentId: M:CRMScript.NetServer.NSCategorizationStatusResponse.GetContextIdentifier()
-  id: 'GetContextIdentifier()'
-  so.intellisense: NSCategorizationStatusResponse.GetContextIdentifier
-  langs:
-  - crmscript
-  name: 'GetContextIdentifier()'
-  nameWithType: NSCategorizationStatusResponse.GetContextIdentifier()
-  fullName: CRMScript.NetServer.NSCategorizationStatusResponse.GetContextIdentifier()
-  type: Method
-  summary: "\nContextidentifier to identify customer<p></p>\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSCategorizationStatusResponse thing;\nString contextIdentifier = thing.GetContextIdentifier();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetContextIdentifier()
-    parameters:
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSCategorizationStatusResponse thing;\nString contextIdentifier = thing.GetContextIdentifier();</code></pre>\n"
-- uid: CRMScript.NetServer.NSCategorizationStatusResponse.GetCurrentModel()
-  commentId: M:CRMScript.NetServer.NSCategorizationStatusResponse.GetCurrentModel()
-  id: 'GetCurrentModel()'
-  so.intellisense: NSCategorizationStatusResponse.GetCurrentModel
-  langs:
-  - crmscript
-  name: 'GetCurrentModel()'
-  nameWithType: NSCategorizationStatusResponse.GetCurrentModel()
-  fullName: CRMScript.NetServer.NSCategorizationStatusResponse.GetCurrentModel()
-  type: Method
-  summary: "\nCurrent model information<p></p>\n<strong>Returns:</strong>NSCategorizationModelDetails<p></p>\n<pre><code>NSCategorizationStatusResponse thing;\nNSCategorizationModelDetails currentModel = thing.GetCurrentModel();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: NSCategorizationModelDetails GetCurrentModel()
-    parameters:
-    return:
-      type: CRMScript.NetServer.NSCategorizationModelDetails
-  example: 
-  - "\n<pre><code>NSCategorizationStatusResponse thing;\nNSCategorizationModelDetails currentModel = thing.GetCurrentModel();</code></pre>\n"
-- uid: CRMScript.NetServer.NSCategorizationStatusResponse.GetPreviousModel()
-  commentId: M:CRMScript.NetServer.NSCategorizationStatusResponse.GetPreviousModel()
-  id: 'GetPreviousModel()'
-  so.intellisense: NSCategorizationStatusResponse.GetPreviousModel
-  langs:
-  - crmscript
-  name: 'GetPreviousModel()'
-  nameWithType: NSCategorizationStatusResponse.GetPreviousModel()
-  fullName: CRMScript.NetServer.NSCategorizationStatusResponse.GetPreviousModel()
-  type: Method
-  summary: "\nPrevious model information<p></p>\n<strong>Returns:</strong>NSCategorizationModelDetails<p></p>\n<pre><code>NSCategorizationStatusResponse thing;\nNSCategorizationModelDetails previousModel = thing.GetPreviousModel();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: NSCategorizationModelDetails GetPreviousModel()
-    parameters:
-    return:
-      type: CRMScript.NetServer.NSCategorizationModelDetails
-  example: 
-  - "\n<pre><code>NSCategorizationStatusResponse thing;\nNSCategorizationModelDetails previousModel = thing.GetPreviousModel();</code></pre>\n"
-- uid: CRMScript.NetServer.NSCategorizationStatusResponse.GetStatus()
-  commentId: M:CRMScript.NetServer.NSCategorizationStatusResponse.GetStatus()
-  id: 'GetStatus()'
-  so.intellisense: NSCategorizationStatusResponse.GetStatus
-  langs:
-  - crmscript
-  name: 'GetStatus()'
-  nameWithType: NSCategorizationStatusResponse.GetStatus()
-  fullName: CRMScript.NetServer.NSCategorizationStatusResponse.GetStatus()
-  type: Method
-  summary: "\nDetermines if a training is running, finished or unavailable<p></p>\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSCategorizationStatusResponse thing;\nString status = thing.GetStatus();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetStatus()
-    parameters:
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSCategorizationStatusResponse thing;\nString status = thing.GetStatus();</code></pre>\n"
 - uid: CRMScript.NetServer.NSCategorizationStatusResponse.#ctor
   commentId: M:CRMScript.NetServer.NSCategorizationStatusResponse.#ctor
   id: '#ctor'
@@ -113,6 +36,86 @@ items:
   syntax: 
     content: NSCategorizationStatusResponse
   example: 
+- uid: CRMScript.NetServer.NSCategorizationStatusResponse.GetContextIdentifier()
+  commentId: M:CRMScript.NetServer.NSCategorizationStatusResponse.GetContextIdentifier()
+  id: 'GetContextIdentifier()'
+  so.intellisense: NSCategorizationStatusResponse.GetContextIdentifier
+  langs:
+  - crmscript
+  name: 'GetContextIdentifier()'
+  nameWithType: NSCategorizationStatusResponse.GetContextIdentifier()
+  fullName: CRMScript.NetServer.NSCategorizationStatusResponse.GetContextIdentifier()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetContextIdentifier()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Context-identifier to identify customer
+  example: 
+  - "\n<pre><code>NSCategorizationStatusResponse thing;\nString contextIdentifier = thing.GetContextIdentifier();</code></pre>\n"
+- uid: CRMScript.NetServer.NSCategorizationStatusResponse.GetCurrentModel()
+  commentId: M:CRMScript.NetServer.NSCategorizationStatusResponse.GetCurrentModel()
+  id: 'GetCurrentModel()'
+  so.intellisense: NSCategorizationStatusResponse.GetCurrentModel
+  langs:
+  - crmscript
+  name: 'GetCurrentModel()'
+  nameWithType: NSCategorizationStatusResponse.GetCurrentModel()
+  fullName: CRMScript.NetServer.NSCategorizationStatusResponse.GetCurrentModel()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: NSCategorizationModelDetails GetCurrentModel()
+    parameters: []
+    return:
+      type: CRMScript.NetServer.NSCategorizationModelDetails
+      description: Current model information
+  example: 
+  - "\n<pre><code>NSCategorizationStatusResponse thing;\nNSCategorizationModelDetails currentModel = thing.GetCurrentModel();</code></pre>\n"
+- uid: CRMScript.NetServer.NSCategorizationStatusResponse.GetPreviousModel()
+  commentId: M:CRMScript.NetServer.NSCategorizationStatusResponse.GetPreviousModel()
+  id: 'GetPreviousModel()'
+  so.intellisense: NSCategorizationStatusResponse.GetPreviousModel
+  langs:
+  - crmscript
+  name: 'GetPreviousModel()'
+  nameWithType: NSCategorizationStatusResponse.GetPreviousModel()
+  fullName: CRMScript.NetServer.NSCategorizationStatusResponse.GetPreviousModel()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: NSCategorizationModelDetails GetPreviousModel()
+    parameters: []
+    return:
+      type: CRMScript.NetServer.NSCategorizationModelDetails
+      description: Previous model information
+  example: 
+  - "\n<pre><code>NSCategorizationStatusResponse thing;\nNSCategorizationModelDetails previousModel = thing.GetPreviousModel();</code></pre>\n"
+- uid: CRMScript.NetServer.NSCategorizationStatusResponse.GetStatus()
+  commentId: M:CRMScript.NetServer.NSCategorizationStatusResponse.GetStatus()
+  id: 'GetStatus()'
+  so.intellisense: NSCategorizationStatusResponse.GetStatus
+  langs:
+  - crmscript
+  name: 'GetStatus()'
+  nameWithType: NSCategorizationStatusResponse.GetStatus()
+  fullName: CRMScript.NetServer.NSCategorizationStatusResponse.GetStatus()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetStatus()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Determines if a training is running, finished, or unavailable
+  example: 
+  - "\n<pre><code>NSCategorizationStatusResponse thing;\nString status = thing.GetStatus();</code></pre>\n"
 - uid: CRMScript.NetServer.NSCategorizationStatusResponse.SetContextIdentifier(String)
   commentId: M:CRMScript.NetServer.NSCategorizationStatusResponse.SetContextIdentifier(String)
   id: 'SetContextIdentifier(String)'
@@ -123,48 +126,58 @@ items:
   nameWithType: NSCategorizationStatusResponse.SetContextIdentifier(String)
   fullName: CRMScript.NetServer.NSCategorizationStatusResponse.SetContextIdentifier(String)
   type: Method
-  summary: "\nContextidentifier to identify customer\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetContextIdentifier(String contextIdentifier)
+    content: Void SetContextIdentifier(String contextIdentifier)
     parameters:
     - id: contextIdentifier
       type: CRMScript.Global.String
-      description: 
+      description: Context-identifier to identify customer
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSCategorizationStatusResponse thing;\nString contextIdentifier;\nthing.SetContextIdentifier(contextIdentifier);</code></pre>\n"
-- uid: CRMScript.NetServer.NSCategorizationStatusResponse.SetCurrentModel()
-  commentId: M:CRMScript.NetServer.NSCategorizationStatusResponse.SetCurrentModel()
-  id: 'SetCurrentModel()'
+- uid: CRMScript.NetServer.NSCategorizationStatusResponse.SetCurrentModel(NSCategorizationModelDetails)
+  commentId: M:CRMScript.NetServer.NSCategorizationStatusResponse.SetCurrentModel(NSCategorizationModelDetails)
+  id: 'SetCurrentModel(NSCategorizationModelDetails)'
   so.intellisense: NSCategorizationStatusResponse.SetCurrentModel
   langs:
   - crmscript
-  name: 'SetCurrentModel()'
-  nameWithType: NSCategorizationStatusResponse.SetCurrentModel()
-  fullName: CRMScript.NetServer.NSCategorizationStatusResponse.SetCurrentModel()
+  name: 'SetCurrentModel(NSCategorizationModelDetails)'
+  nameWithType: NSCategorizationStatusResponse.SetCurrentModel(NSCategorizationModelDetails)
+  fullName: CRMScript.NetServer.NSCategorizationStatusResponse.SetCurrentModel(NSCategorizationModelDetails)
   type: Method
-  summary: "\nCurrent model information\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetCurrentModel(NSCategorizationModelDetails currentModel)
+    content: Void SetCurrentModel(NSCategorizationModelDetails currentModel)
     parameters:
+    - id: currentModel
+      type: CRMScript.NetServer.NSCategorizationModelDetails
+      description: Current model information
   example: 
   - "\n<pre><code>NSCategorizationStatusResponse thing;\nNSCategorizationModelDetails currentModel;\nthing.SetCurrentModel(currentModel);</code></pre>\n"
-- uid: CRMScript.NetServer.NSCategorizationStatusResponse.SetPreviousModel()
-  commentId: M:CRMScript.NetServer.NSCategorizationStatusResponse.SetPreviousModel()
-  id: 'SetPreviousModel()'
+- uid: CRMScript.NetServer.NSCategorizationStatusResponse.SetPreviousModel(NSCategorizationModelDetails)
+  commentId: M:CRMScript.NetServer.NSCategorizationStatusResponse.SetPreviousModel(NSCategorizationModelDetails)
+  id: 'SetPreviousModel(NSCategorizationModelDetails)'
   so.intellisense: NSCategorizationStatusResponse.SetPreviousModel
   langs:
   - crmscript
-  name: 'SetPreviousModel()'
-  nameWithType: NSCategorizationStatusResponse.SetPreviousModel()
-  fullName: CRMScript.NetServer.NSCategorizationStatusResponse.SetPreviousModel()
+  name: 'SetPreviousModel(NSCategorizationModelDetails)'
+  nameWithType: NSCategorizationStatusResponse.SetPreviousModel(NSCategorizationModelDetails)
+  fullName: CRMScript.NetServer.NSCategorizationStatusResponse.SetPreviousModel(NSCategorizationModelDetails)
   type: Method
-  summary: "\nPrevious model information\n"
+  summary: ""
   remarks: 
   syntax: 
     content: SetPreviousModel(NSCategorizationModelDetails previousModel)
     parameters:
+    - id: previousModel
+      type: CRMScript.NetServer.NSCategorizationModelDetails
+      description: Previous model information
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSCategorizationStatusResponse thing;\nNSCategorizationModelDetails previousModel;\nthing.SetPreviousModel(previousModel);</code></pre>\n"
 - uid: CRMScript.NetServer.NSCategorizationStatusResponse.SetStatus(String)
@@ -177,14 +190,16 @@ items:
   nameWithType: NSCategorizationStatusResponse.SetStatus(String)
   fullName: CRMScript.NetServer.NSCategorizationStatusResponse.SetStatus(String)
   type: Method
-  summary: "\nDetermines if a training is running, finished or unavailable\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetStatus(String status)
+    content: Void SetStatus(String status)
     parameters:
     - id: status
       type: CRMScript.Global.String
-      description: 
+      description: Determines if a training is running, finished, or unavailable
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSCategorizationStatusResponse thing;\nString status;\nthing.SetStatus(status);</code></pre>\n"
 references:
@@ -206,3 +221,9 @@ references:
   name: NSCategorizationModelDetails
   nameWithType: NSCategorizationModelDetails
   fullName: CRMScript.NetServer.NSCategorizationModelDetails
+- uid: CRMScript.Global.Void
+  commentId: T:CRMScript.Global.Void
+  isExternal: true
+  name: Void
+  nameWithType: Void
+  fullName: CRMScript.Global.Void
