--- a/docs/api-reference/CRMScript.NetServer.NSCategoryGuess.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCategoryGuess.yml
@@ -3,18 +3,32 @@ items:
 - uid: CRMScript.NetServer.NSCategoryGuess
   commentId: T:CRMScript.NetServer.NSCategoryGuess
   id: NSCategoryGuess
-  so.intellisense: Void.NSCategoryGuess
   langs:
   - crmscript
   children:
-  - CRMScript.NetServer.NSCategoryGuess.GetDummy()
   - CRMScript.NetServer.NSCategoryGuess.#ctor
+  - CRMScript.NetServer.NSCategoryGuess.GetDummy()
   - CRMScript.NetServer.NSCategoryGuess.SetDummy(String)
   name: NSCategoryGuess
   nameWithType: NSCategoryGuess
   fullName: CRMScript.NetServer.NSCategoryGuess
   type: Class
-  summary: 
+  summary: "\nCurrently not used!\n"
+  example: 
+- uid: CRMScript.NetServer.NSCategoryGuess.#ctor
+  commentId: M:CRMScript.NetServer.NSCategoryGuess.#ctor
+  id: '#ctor'
+  so.intellisense: Void.NSCategoryGuess
+  langs:
+  - crmscript
+  name: '#ctor'
+  nameWithType: NSCategoryGuess.#ctor
+  fullName: CRMScript.NetServer.NSCategoryGuess.#ctor
+  type: Constructor
+  summary: "\nCurrently not used!\n"
+  remarks: 
+  syntax: 
+    content: NSCategoryGuess
   example: 
 - uid: CRMScript.NetServer.NSCategoryGuess.GetDummy()
   commentId: M:CRMScript.NetServer.NSCategoryGuess.GetDummy()
@@ -26,30 +40,16 @@ items:
   nameWithType: NSCategoryGuess.GetDummy()
   fullName: CRMScript.NetServer.NSCategoryGuess.GetDummy()
   type: Method
-  summary: "\nThis carrier is currently not used<p></p>\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSCategoryGuess thing;\nString dummy = thing.GetDummy();</code></pre>\n"
+  summary: "\nCurrently not used!\n"
   remarks: 
   syntax: 
     content: String GetDummy()
-    parameters:
+    parameters: []
     return:
       type: CRMScript.Global.String
+      description:
   example: 
   - "\n<pre><code>NSCategoryGuess thing;\nString dummy = thing.GetDummy();</code></pre>\n"
-- uid: CRMScript.NetServer.NSCategoryGuess.#ctor
-  commentId: M:CRMScript.NetServer.NSCategoryGuess.#ctor
-  id: '#ctor'
-  so.intellisense: Void.NSCategoryGuess
-  langs:
-  - crmscript
-  name: '#ctor'
-  nameWithType: NSCategoryGuess.#ctor
-  fullName: CRMScript.NetServer.NSCategoryGuess.#ctor
-  type: Constructor
-  summary: 
-  remarks: 
-  syntax: 
-    content: NSCategoryGuess
-  example: 
 - uid: CRMScript.NetServer.NSCategoryGuess.SetDummy(String)
   commentId: M:CRMScript.NetServer.NSCategoryGuess.SetDummy(String)
   id: 'SetDummy(String)'
@@ -60,14 +60,16 @@ items:
   nameWithType: NSCategoryGuess.SetDummy(String)
   fullName: CRMScript.NetServer.NSCategoryGuess.SetDummy(String)
   type: Method
-  summary: "\nThis carrier is currently not used\n"
+  summary: "\nCurrently not used!\n"
   remarks: 
   syntax: 
-    content: SetDummy(String dummy)
+    content: Void SetDummy(String dummy)
     parameters:
     - id: dummy
       type: CRMScript.Global.String
       description: 
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSCategoryGuess thing;\nString dummy;\nthing.SetDummy(dummy);</code></pre>\n"
 references:
@@ -83,3 +85,9 @@ references:
   name: String
   nameWithType: String
   fullName: CRMScript.Global.String
+- uid: CRMScript.Global.Void
+  commentId: T:CRMScript.Global.Void
+  isExternal: true
+  name: Void
+  nameWithType: Void
+  fullName: CRMScript.Global.Void
