--- a/docs/api-reference/CRMScript.NetServer.NSChatBotSettings.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSChatBotSettings.yml
@@ -3,16 +3,15 @@ items:
 - uid: CRMScript.NetServer.NSChatBotSettings
   commentId: T:CRMScript.NetServer.NSChatBotSettings
   id: NSChatBotSettings
-  so.intellisense: Void.NSChatBotSettings
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSChatBotSettings.#ctor
   - CRMScript.NetServer.NSChatBotSettings.GetBotMessageReceivedScriptId()
   - CRMScript.NetServer.NSChatBotSettings.GetBotName()
   - CRMScript.NetServer.NSChatBotSettings.GetBotRegisterScriptId()
   - CRMScript.NetServer.NSChatBotSettings.GetBotSessionChangedScriptId()
   - CRMScript.NetServer.NSChatBotSettings.GetBotSessionCreatedScriptId()
-  - CRMScript.NetServer.NSChatBotSettings.#ctor
   - CRMScript.NetServer.NSChatBotSettings.SetBotMessageReceivedScriptId(Integer)
   - CRMScript.NetServer.NSChatBotSettings.SetBotName(String)
   - CRMScript.NetServer.NSChatBotSettings.SetBotRegisterScriptId(Integer)
@@ -24,101 +23,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSChatBotSettings.GetBotMessageReceivedScriptId()
-  commentId: M:CRMScript.NetServer.NSChatBotSettings.GetBotMessageReceivedScriptId()
-  id: 'GetBotMessageReceivedScriptId()'
-  so.intellisense: NSChatBotSettings.GetBotMessageReceivedScriptId
-  langs:
-  - crmscript
-  name: 'GetBotMessageReceivedScriptId()'
-  nameWithType: NSChatBotSettings.GetBotMessageReceivedScriptId()
-  fullName: CRMScript.NetServer.NSChatBotSettings.GetBotMessageReceivedScriptId()
-  type: Method
-  summary: "\nScript id to run when new messages received from customer.<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSChatBotSettings thing;\nInteger botMessageReceivedScriptId = thing.GetBotMessageReceivedScriptId();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: Integer GetBotMessageReceivedScriptId()
-    parameters:
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSChatBotSettings thing;\nInteger botMessageReceivedScriptId = thing.GetBotMessageReceivedScriptId();</code></pre>\n"
-- uid: CRMScript.NetServer.NSChatBotSettings.GetBotName()
-  commentId: M:CRMScript.NetServer.NSChatBotSettings.GetBotName()
-  id: 'GetBotName()'
-  so.intellisense: NSChatBotSettings.GetBotName
-  langs:
-  - crmscript
-  name: 'GetBotName()'
-  nameWithType: NSChatBotSettings.GetBotName()
-  fullName: CRMScript.NetServer.NSChatBotSettings.GetBotName()
-  type: Method
-  summary: "\nChatbot name<p></p>\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSChatBotSettings thing;\nString botName = thing.GetBotName();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetBotName()
-    parameters:
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSChatBotSettings thing;\nString botName = thing.GetBotName();</code></pre>\n"
-- uid: CRMScript.NetServer.NSChatBotSettings.GetBotRegisterScriptId()
-  commentId: M:CRMScript.NetServer.NSChatBotSettings.GetBotRegisterScriptId()
-  id: 'GetBotRegisterScriptId()'
-  so.intellisense: NSChatBotSettings.GetBotRegisterScriptId
-  langs:
-  - crmscript
-  name: 'GetBotRegisterScriptId()'
-  nameWithType: NSChatBotSettings.GetBotRegisterScriptId()
-  fullName: CRMScript.NetServer.NSChatBotSettings.GetBotRegisterScriptId()
-  type: Method
-  summary: "\nScript id to register/unregister chatbot. 0 if there is no bot<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSChatBotSettings thing;\nInteger botRegisterScriptId = thing.GetBotRegisterScriptId();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: Integer GetBotRegisterScriptId()
-    parameters:
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSChatBotSettings thing;\nInteger botRegisterScriptId = thing.GetBotRegisterScriptId();</code></pre>\n"
-- uid: CRMScript.NetServer.NSChatBotSettings.GetBotSessionChangedScriptId()
-  commentId: M:CRMScript.NetServer.NSChatBotSettings.GetBotSessionChangedScriptId()
-  id: 'GetBotSessionChangedScriptId()'
-  so.intellisense: NSChatBotSettings.GetBotSessionChangedScriptId
-  langs:
-  - crmscript
-  name: 'GetBotSessionChangedScriptId()'
-  nameWithType: NSChatBotSettings.GetBotSessionChangedScriptId()
-  fullName: CRMScript.NetServer.NSChatBotSettings.GetBotSessionChangedScriptId()
-  type: Method
-  summary: "\nScript id to run when session state changes.<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSChatBotSettings thing;\nInteger botSessionChangedScriptId = thing.GetBotSessionChangedScriptId();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: Integer GetBotSessionChangedScriptId()
-    parameters:
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSChatBotSettings thing;\nInteger botSessionChangedScriptId = thing.GetBotSessionChangedScriptId();</code></pre>\n"
-- uid: CRMScript.NetServer.NSChatBotSettings.GetBotSessionCreatedScriptId()
-  commentId: M:CRMScript.NetServer.NSChatBotSettings.GetBotSessionCreatedScriptId()
-  id: 'GetBotSessionCreatedScriptId()'
-  so.intellisense: NSChatBotSettings.GetBotSessionCreatedScriptId
-  langs:
-  - crmscript
-  name: 'GetBotSessionCreatedScriptId()'
-  nameWithType: NSChatBotSettings.GetBotSessionCreatedScriptId()
-  fullName: CRMScript.NetServer.NSChatBotSettings.GetBotSessionCreatedScriptId()
-  type: Method
-  summary: "\nScript id to run on new session.<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSChatBotSettings thing;\nInteger botSessionCreatedScriptId = thing.GetBotSessionCreatedScriptId();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: Integer GetBotSessionCreatedScriptId()
-    parameters:
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSChatBotSettings thing;\nInteger botSessionCreatedScriptId = thing.GetBotSessionCreatedScriptId();</code></pre>\n"
 - uid: CRMScript.NetServer.NSChatBotSettings.#ctor
   commentId: M:CRMScript.NetServer.NSChatBotSettings.#ctor
   id: '#ctor'
@@ -134,6 +38,106 @@ items:
   syntax: 
     content: NSChatBotSettings
   example: 
+- uid: CRMScript.NetServer.NSChatBotSettings.GetBotMessageReceivedScriptId()
+  commentId: M:CRMScript.NetServer.NSChatBotSettings.GetBotMessageReceivedScriptId()
+  id: 'GetBotMessageReceivedScriptId()'
+  so.intellisense: NSChatBotSettings.GetBotMessageReceivedScriptId
+  langs:
+  - crmscript
+  name: 'GetBotMessageReceivedScriptId()'
+  nameWithType: NSChatBotSettings.GetBotMessageReceivedScriptId()
+  fullName: CRMScript.NetServer.NSChatBotSettings.GetBotMessageReceivedScriptId()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetBotMessageReceivedScriptId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: Script ID to run when new messages received from customer.
+  example: 
+  - "\n<pre><code>NSChatBotSettings thing;\nInteger botMessageReceivedScriptId = thing.GetBotMessageReceivedScriptId();</code></pre>\n"
+- uid: CRMScript.NetServer.NSChatBotSettings.GetBotName()
+  commentId: M:CRMScript.NetServer.NSChatBotSettings.GetBotName()
+  id: 'GetBotName()'
+  so.intellisense: NSChatBotSettings.GetBotName
+  langs:
+  - crmscript
+  name: 'GetBotName()'
+  nameWithType: NSChatBotSettings.GetBotName()
+  fullName: CRMScript.NetServer.NSChatBotSettings.GetBotName()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetBotName()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Chatbot name
+  example: 
+  - "\n<pre><code>NSChatBotSettings thing;\nString botName = thing.GetBotName();</code></pre>\n"
+- uid: CRMScript.NetServer.NSChatBotSettings.GetBotRegisterScriptId()
+  commentId: M:CRMScript.NetServer.NSChatBotSettings.GetBotRegisterScriptId()
+  id: 'GetBotRegisterScriptId()'
+  so.intellisense: NSChatBotSettings.GetBotRegisterScriptId
+  langs:
+  - crmscript
+  name: 'GetBotRegisterScriptId()'
+  nameWithType: NSChatBotSettings.GetBotRegisterScriptId()
+  fullName: CRMScript.NetServer.NSChatBotSettings.GetBotRegisterScriptId()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetBotRegisterScriptId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: Script ID to register/unregister chatbot. 0 if there is no bot
+  example: 
+  - "\n<pre><code>NSChatBotSettings thing;\nInteger botRegisterScriptId = thing.GetBotRegisterScriptId();</code></pre>\n"
+- uid: CRMScript.NetServer.NSChatBotSettings.GetBotSessionChangedScriptId()
+  commentId: M:CRMScript.NetServer.NSChatBotSettings.GetBotSessionChangedScriptId()
+  id: 'GetBotSessionChangedScriptId()'
+  so.intellisense: NSChatBotSettings.GetBotSessionChangedScriptId
+  langs:
+  - crmscript
+  name: 'GetBotSessionChangedScriptId()'
+  nameWithType: NSChatBotSettings.GetBotSessionChangedScriptId()
+  fullName: CRMScript.NetServer.NSChatBotSettings.GetBotSessionChangedScriptId()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetBotSessionChangedScriptId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: Script ID to run when session state changes.
+  example: 
+  - "\n<pre><code>NSChatBotSettings thing;\nInteger botSessionChangedScriptId = thing.GetBotSessionChangedScriptId();</code></pre>\n"
+- uid: CRMScript.NetServer.NSChatBotSettings.GetBotSessionCreatedScriptId()
+  commentId: M:CRMScript.NetServer.NSChatBotSettings.GetBotSessionCreatedScriptId()
+  id: 'GetBotSessionCreatedScriptId()'
+  so.intellisense: NSChatBotSettings.GetBotSessionCreatedScriptId
+  langs:
+  - crmscript
+  name: 'GetBotSessionCreatedScriptId()'
+  nameWithType: NSChatBotSettings.GetBotSessionCreatedScriptId()
+  fullName: CRMScript.NetServer.NSChatBotSettings.GetBotSessionCreatedScriptId()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetBotSessionCreatedScriptId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: Script ID to run on new session.
+  example: 
+  - "\n<pre><code>NSChatBotSettings thing;\nInteger botSessionCreatedScriptId = thing.GetBotSessionCreatedScriptId();</code></pre>\n"
 - uid: CRMScript.NetServer.NSChatBotSettings.SetBotMessageReceivedScriptId(Integer)
   commentId: M:CRMScript.NetServer.NSChatBotSettings.SetBotMessageReceivedScriptId(Integer)
   id: 'SetBotMessageReceivedScriptId(Integer)'
@@ -144,14 +148,16 @@ items:
   nameWithType: NSChatBotSettings.SetBotMessageReceivedScriptId(Integer)
   fullName: CRMScript.NetServer.NSChatBotSettings.SetBotMessageReceivedScriptId(Integer)
   type: Method
-  summary: "\nScript id to run when new messages received from customer.\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetBotMessageReceivedScriptId(Integer botMessageReceivedScriptId)
+    content: Void SetBotMessageReceivedScriptId(Integer botMessageReceivedScriptId)
     parameters:
     - id: botMessageReceivedScriptId
       type: CRMScript.Global.Integer
-      description: 
+      description: Script ID to run when new messages received from customer.
+    return:
+      type: CRMScript.Global.Void 
   example: 
   - "\n<pre><code>NSChatBotSettings thing;\nInteger botMessageReceivedScriptId;\nthing.SetBotMessageReceivedScriptId(botMessageReceivedScriptId);</code></pre>\n"
 - uid: CRMScript.NetServer.NSChatBotSettings.SetBotName(String)
@@ -164,14 +170,16 @@ items:
   nameWithType: NSChatBotSettings.SetBotName(String)
   fullName: CRMScript.NetServer.NSChatBotSettings.SetBotName(String)
   type: Method
-  summary: "\nChatbot name\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetBotName(String botName)
+    content: Void SetBotName(String botName)
     parameters:
     - id: botName
       type: CRMScript.Global.String
-      description: 
+      description: Chatbot name
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSChatBotSettings thing;\nString botName;\nthing.SetBotName(botName);</code></pre>\n"
 - uid: CRMScript.NetServer.NSChatBotSettings.SetBotRegisterScriptId(Integer)
@@ -184,14 +192,16 @@ items:
   nameWithType: NSChatBotSettings.SetBotRegisterScriptId(Integer)
   fullName: CRMScript.NetServer.NSChatBotSettings.SetBotRegisterScriptId(Integer)
   type: Method
-  summary: "\nScript id to register/unregister chatbot. 0 if there is no bot\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetBotRegisterScriptId(Integer botRegisterScriptId)
+    content: Void SetBotRegisterScriptId(Integer botRegisterScriptId)
     parameters:
     - id: botRegisterScriptId
       type: CRMScript.Global.Integer
-      description: 
+      description: Script ID to register/unregister chatbot. 0 if there is no bot
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSChatBotSettings thing;\nInteger botRegisterScriptId;\nthing.SetBotRegisterScriptId(botRegisterScriptId);</code></pre>\n"
 - uid: CRMScript.NetServer.NSChatBotSettings.SetBotSessionChangedScriptId(Integer)
@@ -204,14 +214,16 @@ items:
   nameWithType: NSChatBotSettings.SetBotSessionChangedScriptId(Integer)
   fullName: CRMScript.NetServer.NSChatBotSettings.SetBotSessionChangedScriptId(Integer)
   type: Method
-  summary: "\nScript id to run when session state changes.\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetBotSessionChangedScriptId(Integer botSessionChangedScriptId)
+    content: Void SetBotSessionChangedScriptId(Integer botSessionChangedScriptId)
     parameters:
     - id: botSessionChangedScriptId
       type: CRMScript.Global.Integer
-      description: 
+      description: Script ID to run when session state changes.
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSChatBotSettings thing;\nInteger botSessionChangedScriptId;\nthing.SetBotSessionChangedScriptId(botSessionChangedScriptId);</code></pre>\n"
 - uid: CRMScript.NetServer.NSChatBotSettings.SetBotSessionCreatedScriptId(Integer)
@@ -224,14 +236,16 @@ items:
   nameWithType: NSChatBotSettings.SetBotSessionCreatedScriptId(Integer)
   fullName: CRMScript.NetServer.NSChatBotSettings.SetBotSessionCreatedScriptId(Integer)
   type: Method
-  summary: "\nScript id to run on new session.\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetBotSessionCreatedScriptId(Integer botSessionCreatedScriptId)
+    content: Void SetBotSessionCreatedScriptId(Integer botSessionCreatedScriptId)
     parameters:
     - id: botSessionCreatedScriptId
       type: CRMScript.Global.Integer
-      description: 
+      description: Script ID to run on new session.
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSChatBotSettings thing;\nInteger botSessionCreatedScriptId;\nthing.SetBotSessionCreatedScriptId(botSessionCreatedScriptId);</code></pre>\n"
 references:
@@ -253,3 +267,9 @@ references:
   name: String
   nameWithType: String
   fullName: CRMScript.Global.String
+- uid: CRMScript.Global.Void
+  commentId: T:CRMScript.Global.Void
+  isExternal: true
+  name: Void
+  nameWithType: Void
+  fullName: CRMScript.Global.Void
